# hysteresis_compensation_ROS

./: README.md
GAN-based-segmentation/: application.py
GAN-based-segmentation/checkpoint/: cyclegan.model-42662.index
GAN-based-segmentation/code/: main.py  model.py  module.py  run.sh  utils.py
angle_estimation/: create_noise_img.py  img_resize.py  nb_create_features.py  nb_create_pair.py  nb_create_pair_w.py  nb_data_shuffle.py  nb_network_test.py  nb_retrieval.py  nb_retrieval_w.py  nb_tf_record.py  nb_train.py
operation/: bdh_img_saver_new.py  bdh_img_saver_scnn.py  bdhnet-100.index  bdhnet-200.index  checkpoint  command.msg  helper_utils.py  kalman_filter.py  nb_create_features.py  nb_network.py  nb_optimzation.py  nb_pose_estimation (copy).py  nb_pose_estimation.py  nb_retrieval.py  nb_segmentation.py  rendering_msg.msg  sensor_fusion.msg  vision_estimation.msg
operation/bdh_aurora/: CMakeLists.txt  package.xml
operation/bdh_aurora/include/bdh_aurora/: Thread.h  vaurora.h
operation/bdh_aurora/src/: Thread.cpp  Thread.h  apistructures.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  vaurora.cpp  vaurora.h  vserialcomm.cpp
operation/include/nobaek/: PhidgetBridge.h  PhidgetEncoder.h  apistructures.h  dy_packet.h  estimator_fusion.h  mainwindow.h  thread.h  thread1.h  thread2.h  uEPOS2Control.h  vDX.h  vaurora.h
operation/opencv/: CMakeLists.txt  package.xml  readme.txt
operation/opencv/include/opencv/: MJPEGCapture.h  dh_cam.h
operation/opencv/msg/: vision_msg.msg
operation/opencv/src/: MJPEGCapture.cpp  dh_cam.cpp  main.cpp
operation/optimizer_input/: BoucWen.m  CostFunction.m  GA_run.m  RK_BoucWen.m  aurora_ff.txt  ff.txt  odd_test.txt  optimized_result.txt  output.txt  scnn_ff.txt  scnn_test.txt  test0224.txt
operation/optimizer_input/guide_image_generation/: comparison.m  comparison.m~  hysteresis.m  main.m  tmp.m  tmp2.m
operation/src/: PhidgetBridge.cpp  PhidgetEncoder.cpp  dy_packet.cpp  estimator_fusion.cpp  main.cpp  mainwindow.cpp  mainwindow.ui  thread.cpp  thread1.cpp  thread2.cpp  uEPOS2Control.cpp  vDX.cpp  vaurora.cpp  vserialcomm.cpp
optimization/: BFGS.txt  CG.txt  GA.txt  LBFGSB.txt  PSO.txt  Powell.txt  bdh_boucwen.py  bdh_optimizer_GA.py  bdh_optimizer_PPO.py  optimization_comp.m  run_ga.sh  run_pso.sh
optimization/selected/: 150.txt  180.txt  240.txt  270.txt  30.txt  60.txt  conf0_50.txt  conf0_60.txt  conf0_60_.txt  conf0_70.txt  conf90_50.txt  conf90_60.txt  conf90_70.txt
optimization_nhoyh/: run.sh  scipy_optimizer.py
optimization_nhoyh/result/: COBYLA.txt  NM.txt  SLSQP.txt  TNC.txt  optimization_comp.m  optimization_result.ods
optimization_nhoyh/selected/: 0.txt  120.txt  210.txt  90.txt
