<?xml version="1.0"?>
<package>
  <name>bdh_aurora</name>
  <version>0.1.0</version>
  <description>The bdh_aurora package</description>

  <maintainer email="seojh@todo.todo">seojh</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>da_msg</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>da_msg</run_depend>

  <export>
  </export>
</package>
